--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>mofang_cms</title>
+    <style>
+      body{
+        font-size: 16px;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
